@@ -1,4 +1,5 @@
 v0.11.0 (2017-09-02)
+- Feature: add temporary action to reset all movie set IDs
 - Fix: only report Beef + Kodi version once per file per version pair
 
 v0.11.0~beta3 (2017-08-29)
